@@ -1,3 +1,10 @@
+2006-09-03  Miklos Szeredi <miklos@szeredi.hu>
+
+	* lib: Multithreaded loop now allows unlimited number of threads.
+	This is needed for locking operations which may block
+	indefinitely.  Also the kernel now doesn't limit the number of
+	outstanding requests so the library shouldn't do so either.
+
 2006-09-01  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Fix recursive lock bug in interrupt handling
